--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -14,14 +14,15 @@
   <tr *ngFor="let country of countries; let i = index">
     <th scope="row">{{i +1}}</th>
     <td>
-      <img src="" style="width: 20px"> {{country.name}}
+      <img src="" style="width: 20px"> {{country.name | customPipe:i}}
     </td>
     <td>
       <input type="checkbox" #input [checked]="country.checked" (click)="changeCheckboxValue(country)">
     </td>
-    <td>{{country.status}}</td>
-    <td>{{country.area}}</td>
-    <td>{{country.population}}</td>
+    <td [appColorDir]="'red'">{{country.status}}</td>
+    <td>{{country.area | currency:"EUR"}}</td>
+    <td>{{country.population | number:'2.1-2'}}</td>
+    <td>{{country.date}}</td>
     <td>
       <button (click)="edit(country, i)">Edit</button>
     </td>
