--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,14 @@
-<app-input-bar [text]="'Add'" (pushValue)="afterPush($event)"></app-input-bar>
+<!--<app-input-bar [text]="'Add'" (pushValue)="afterPush($event)"></app-input-bar>-->
 
-<app-table [newCountry]="valueAfterPush" [editedCountry]="newValueAfterEdit" (emitValueToEdit)="edit($event)"></app-table>
+<!--<app-table [newCountry]="valueAfterPush" [editedCountry]="newValueAfterEdit" (emitValueToEdit)="edit($event)"></app-table>-->
 
-<app-input-bar [text]="'Save'" [editValue]="valueAfterEdit" (editValueEvent)="afterEdit($event)"></app-input-bar>
+<!--<app-input-bar [text]="'Save'" [editValue]="valueAfterEdit" (editValueEvent)="afterEdit($event)"></app-input-bar>-->
 
 <!--input = з батьківської в дочірню-->
 <!--output = з дочірньої в батьківську-->
 
+
+<app-form>
+
+
+</app-form>
