--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,17 @@
 <!--output = з дочірньої в батьківську-->
 
 
-<app-form>
+<!--<app-form>-->
+<!--</app-form>-->
+
+<ul>
+  <li>
+    <a href="/user">User page</a>
+  </li>
+  <li>
+    <a href="/admin">Admin page</a>
+  </li>
+</ul>
 
 
-</app-form>
+<router-outlet></router-outlet>
