--- a/src/app/chat-room/chat-room.component.html
+++ b/src/app/chat-room/chat-room.component.html
@@ -1,5 +1,5 @@
 <div class="message-block">
-  <span class="material-icons user-icon">account_circle</span>
+  <img src="{{chatInfo.icon}}" class="chat-icon"/>
   <div class="message-info">
     <span>{{chatInfo.addressedPerson}}</span><br>
     <span>{{chatInfo.message}}</span>
