--- a/src/app/chat-room/chat-room.component.scss
+++ b/src/app/chat-room/chat-room.component.scss
@@ -7,4 +7,10 @@
   margin-bottom: 5px;
   align-items: flex-start;
 }
+.chat-icon{
+  border-radius: 50%;
+  border: 1px solid #D3D3D3;
+  width: 55px;
+  background-color: #F6F4F6;
+}
 
