--- a/src/app/rooms/rooms.component.scss
+++ b/src/app/rooms/rooms.component.scss
@@ -1,7 +1,23 @@
 .main{
   padding: 5px;
+  background-color: #F6F4F6;
+  height: 30%;
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  justify-content: space-between;
 }
 .chat-rooms{
-  border-top: 1px solid black;
-  margin-top: 20px;
+  border-top: 1px solid #D3D3D3;
+  height: 70%;
+  overflow-y: auto;
+
+}
+.chats-title{
+  height: 90px;
+  display: flex;
+  align-items: center;
+  font-size: 20px;
+  padding-left: 10px;
+  color: #8FB7C9;
 }
