--- a/src/app/chat-room/chat-room.component.html
+++ b/src/app/chat-room/chat-room.component.html
@@ -2,7 +2,7 @@
   <img src="{{chatInfo.icon}}" class="chat-icon"/>
   <div class="message-info">
     <span>{{chatInfo.addressedPerson}}</span><br>
-    <span>{{chatInfo.message}}</span>
+    <span class="chat-message">{{chatInfo.message}}</span>
   </div>
-  <span>{{chatInfo.time}}</span>
+  <span class="message-time">{{chatInfo.time}}</span>
 </div>
