styled chat and new improvments w/ chatrooms

--- a/src/app/search/search.component.scss
+++ b/src/app/search/search.component.scss
@@ -6,6 +6,7 @@
   font-weight: 500;
   border: 1px solid #D3D3D3;
   transition: 0.3s;
+  outline: none;
 }
 .search:hover{
   border-radius: 17.5px;
