--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -6,15 +6,15 @@
   </div>
 
   <div class="chat-main">
-    <div *ngFor="let message of chatInfo.messages">
+    <div *ngFor="let message of chatInfo.messages" >
       <div *ngFor="let messageItem of message.message"
            appChatStyle
            [value]="message"
            [addressedPerson]="chatInfo.addressedPerson"
       >
 
-        <img src="{{chatInfo.icon}}" width="30px" height="30px">
-        <span>{{messageItem}}</span>
+        <img src="{{chatInfo.icon}}" class="chat-icon">
+        <p>{{messageItem}}</p>
 
 
       </div>
@@ -22,6 +22,6 @@
   </div>
 
   <div class="chat-footer">
-    <input type="text" placeholder="Type your message" style="width: 90%">
+    <input type="text" placeholder="Type your message">
   </div>
 </div>
