--- a/src/app/chat/chat.component.scss
+++ b/src/app/chat/chat.component.scss
@@ -5,11 +5,36 @@
   justify-content: space-between;
 }
 .chat-header, .chat-footer{
+  background-color: #F6F4F6;
+  display: flex;
+  align-items: center;
+}
+.chat-header{
+  min-height: 15%;
+  border-bottom: 1px solid #D3D3D3;
+  span{
+    font-size: 20px;
+    font-weight: 500;
+  }
+}
+.chat-footer{
+  border-top: 1px solid #D3D3D3;
   min-height: 20%;
-  background-color: gainsboro;
+  justify-content: center;
 }
 .chat-main{
-  min-height: 60%;
   display: flex;
   flex-direction: column;
+  min-height: 65%;
+  padding: 5px 10px 5px 0px;
+  overflow-y: auto;
+  img{
+    margin: 0px 10px;
+  }
+  p{
+    display: inline-block;
+    padding: 15px;
+    border-radius: 27px;
+    color: white;
+  }
 }
