--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,3 +7,10 @@
 *{
   font-family: 'Montserrat', sans-serif;
 }
+.chat-icon{
+  border-radius: 50%;
+  border: 1px solid #D3D3D3;
+  width: 55px;
+  background-color: #F6F4F6;
+  margin: 0px 10px;
+}
