--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -14,14 +14,21 @@
       >
 
         <img src="{{chatInfo.icon}}" class="chat-icon">
-        <p>{{messageItem}}</p>
+        <div>
+          <p>{{messageItem}}</p><br>
+          <p class="chat-time">{{message.data}} {{message.time}}</p>
+        </div>
 
 
       </div>
+
     </div>
   </div>
 
   <div class="chat-footer">
-    <input type="text" placeholder="Type your message">
+    <form>
+      <input type="text" placeholder="Type your message">
+      <button type="submit"><i class="far fa-paper-plane"></i></button>
+    </form>
   </div>
 </div>
