--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,1 +1,1 @@
-<input class="search" type="search" placeholder="Search or start new chat">
+<input class="search" type="search" placeholder="Search or start new chat" #someInput (keyup)="search()">
