fix scroll bottom on load

--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -5,7 +5,7 @@
     <span>{{chatInfo.addressedPerson}}</span>
   </div>
 
-  <div class="chat-main">
+  <div class="chat-main" #scrollMe>
     <div *ngFor="let message of chatInfo.messages" >
       <div *ngFor="let messageItem of message.message"
            appChatStyle
