--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -22,7 +22,10 @@
   </div>
 
   <div class="chat-footer">
-      <input type="text" placeholder="Type your message" (change)="sendMessage()" #input>
+    <div>
+      <input type="text" placeholder="Type your message"  #input>
       <button (click)="sendMessage()"><i class="far fa-paper-plane"></i></button>
+    </div>
+
   </div>
 </div>
