--- a/src/app/chat/chat.component.scss
+++ b/src/app/chat/chat.component.scss
@@ -24,7 +24,7 @@
   border-top: 1px solid #D3D3D3;
   min-height: 20%;
   justify-content: center;
-    form {
+    div {
       position: relative;
       width: 90%;
       margin: 0 auto;
