fixing bugs w/ input send message ang button

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div class="content row">
-  <app-rooms class="col-4 left-side"></app-rooms>
-  <app-chat class="col-8 right-side"></app-chat>
+  <app-rooms class="col-4 col-xl-3 left-side"></app-rooms>
+  <app-chat class="col-8 col-xl-9 right-side"></app-chat>
 </div>
