--- a/src/app/rooms/rooms.component.scss
+++ b/src/app/rooms/rooms.component.scss
@@ -1,7 +1,7 @@
 .main{
   padding: 5px;
   background-color: #F6F4F6;
-  height: 30%;
+  min-height: 20%;
   display: flex;
   flex-direction: column;
   padding: 10px;
@@ -9,7 +9,7 @@
 }
 .chat-rooms{
   border-top: 1px solid #D3D3D3;
-  height: 70%;
+  max-height: 80%;
   overflow-y: auto;
 
 }
