--- a/src/app/chat-room/chat-room.component.html
+++ b/src/app/chat-room/chat-room.component.html
@@ -2,7 +2,7 @@
   <img src="{{chatInfo.icon}}" class="chat-icon"/>
   <div class="message-info">
     <span>{{chatInfo.addressedPerson}}</span><br>
-    <span class="chat-message">{{message}}</span>
+    <div class="chat-message" [message]="message" appCutMessage>{{message}}</div>
   </div>
   <span class="message-time">{{chatInfo.time}}</span>
 </div>
