--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -24,6 +24,8 @@
   <div class="chat-footer">
     <div>
       <input type="text" placeholder="Type your message"  #input>
+<!--      <textarea #input cols="30" rows="5"></textarea>-->
+<!--      //todo textrea-->
       <button (click)="sendMessage()"><i class="far fa-paper-plane"></i></button>
     </div>
 
