chat room bug fixed

--- a/src/app/components/chat-room/chat-room.component.scss
+++ b/src/app/components/chat-room/chat-room.component.scss
@@ -1,5 +1,5 @@
 .message-info{
-  max-width: 55%;
+  max-width: 50%;
   //display: flex;
 }
 .message-block{
@@ -22,5 +22,7 @@
 }
 .message-time{
   font-size: 15px;
+  text-align: center;
+  margin: auto;
 }
 
